TrioEngine/BrunoApi/BrunoApi.h

	class Game;
	class Scene;
	class Model;
/*
Scene
*/
struct HierarchyComponentBridge {
	uint64_t id;
	uint64_t parentId;
	char* name;
};
extern "C" BRUNO_API_EXPORT Scene* __stdcall Scene_Ctor();
extern "C" BRUNO_API_EXPORT void __stdcall Scene_Dtor(Scene* scene);
extern "C" BRUNO_API_EXPORT Scene* __stdcall Scene_GetActiveScene();
extern "C" BRUNO_API_EXPORT void __stdcall Scene_SetActiveScene(Scene* scene);
extern "C" BRUNO_API_EXPORT void __stdcall Scene_Update(Scene* scene);
extern "C" BRUNO_API_EXPORT Camera __stdcall Scene_GetCamera();
extern "C" BRUNO_API_EXPORT void __stdcall Scene_UpdateCamera(Camera camera);
extern "C" BRUNO_API_EXPORT void __stdcall Scene_LoadFromModel(Scene* scene, Model* model);
extern "C" BRUNO_API_EXPORT void __stdcall Scene_GetHierarchies(Scene* scene, int* size, HierarchyComponentBridge** outHierarchies);
extern "C" BRUNO_API_EXPORT void __stdcall Scene_GetTransformMatrixForEntity(Scene* scene, long entity, Matrix *worldMatrix, Vector3 * localPosition, Vector3 * localScale, Quaternion * localRotation);
extern "C" BRUNO_API_EXPORT void __stdcall Scene_TransformTranslate(Scene * scene, long entity, Vector3 * localPosition);
extern "C" BRUNO_API_EXPORT void __stdcall Scene_TransformScale(Scene* scene, long entity, Vector3* deltaScale);
extern "C" BRUNO_API_EXPORT void __stdcall Scene_TransformScaleUniform(Scene* scene, long entity, float scalarFactor);
extern "C" BRUNO_API_EXPORT void __stdcall Scene_TransformRotate(Scene* scene, long entity, Quaternion* deltaRotation);
extern "C" BRUNO_API_EXPORT void __stdcall Scene_TransformSetLocalRotation(Scene* scene, long entity, Quaternion* rotation);